# Mobile-O

./: README.md  infer_image_editing.py  infer_image_generation.py  infer_image_understanding.py  setup.py
.claude/: settings.local.json
Mobile-O-App/: .gitignore  README.md  export.py  export_onnx.py  requirements.txt
Mobile-O-App/android/app/: CMakeLists.txt  build.gradle.kts
Mobile-O-App/android/app/src/main/: AndroidManifest.xml
Mobile-O-App/android/app/src/main/cpp/: vae_postprocess.cpp
Mobile-O-App/android/app/src/main/kotlin/com/mobileo/: MainActivity.kt  MobileOApp.kt
Mobile-O-App/android/app/src/main/kotlin/com/mobileo/data/: ChatMessage.kt  Conversation.kt
Mobile-O-App/android/app/src/main/kotlin/com/mobileo/ml/: DPMSolverScheduler.kt  InferenceModels.kt  MobileConditioningConnector.kt  MobileOGenerator.kt  OnnxSessionManager.kt  Tokenizer.kt
Mobile-O-App/android/app/src/main/kotlin/com/mobileo/service/: ModelDownloadManager.kt
Mobile-O-App/android/app/src/main/kotlin/com/mobileo/ui/screen/: CameraScreen.kt  ConversationScreen.kt  DownloadGateScreen.kt  SettingsScreen.kt
Mobile-O-App/android/app/src/main/kotlin/com/mobileo/ui/theme/: Theme.kt
Mobile-O-App/android/app/src/main/kotlin/com/mobileo/util/: VaePostProcessor.kt
Mobile-O-App/android/app/src/main/kotlin/com/mobileo/viewmodel/: ChatViewModel.kt  SettingsViewModel.kt
Mobile-O-App/android/app/src/main/res/raw/: scheduler_config.json
Mobile-O-App/android/app/src/main/res/values/: strings.xml  themes.xml
eval/: README.md  geneval_requirements.txt  understanding_eval.sh
(+76 files in other folders)
